--- a/.github/workflows/autodeploybeta.yml
+++ b/.github/workflows/autodeploybeta.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-deploy:
-    if: github.repository == 'securityin/cscp-b2b'
+    if: github.repository == 'securityin/cscp-b2b-0'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
